# entail

./: .gitignore  README.md
entail-core/: README.md  setup.cfg
entail-core/src/entail_core/: async_dict.py  cli.py  constants.py  entail.py  entail_file.py  entail_file_processor.py  file_manager.py  project_manager.py  substitution.py  text_document_exception.py  theorem_import.py  theorem_retriever.py
entail-core/src/entail_core/antlr/: EntailLexer.py  EntailListener.py  EntailParser.py  EntailVisitor.py
entail-core/src/entail_core/cli/: cli.py
entail-core/src/entail_core/deduction/: deduction.py  ind_var_dependency_graph.py  line.py  rule.py  utils.py
entail-core/src/entail_core/formula/: constants.py  formula.py  formula_comparing_visitor.py  free_ind_vars_substitution_visitor.py  pred_vars_substitution_visitor.py
entail-core/src/entail_core/model/: entail_file.py  substitution.py  theorem_import.py
entail-core/src/entail_core/parser/: ast_processing.py  ast_processing_exceptions.py  deduction_visitor.py  entail_error_listener.py  entail_error_strategy.py  entail_file_visitor.py  formula_visitor.py  parsing.py  util.py
entail-core/src/entail_core/text/: text.py
entail-core/tests/: deduction_parser.py  formula_parser.py  test_deduction.py  test_deduction_parser.py  test_find_free_ind_var_substitution.py  test_find_free_ind_vars.py  test_formula_equality.py  test_formula_parser.py  test_formula_str.py  test_formula_validation.py  test_free_ind_vars_substitution.py  test_ind_var_dependency_graph.py  test_isomorphism.py  test_pred_vars_substitution.py
(+39 files in other folders)
