[metadata]
name = entail-core-zeljkobrckovic
version = 0.0.1
author = Željko Brcković
author_email = zeljkobrckovic86@gmail.com
description = A library containing data structures and algorithms supporting Entail Language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zbrckovic/entail
project_urls =
    Bug Tracker = https://github.com/zbrckovic/entail/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    bidict==0.22.0
    antlr4-python3-runtime==4.9.3

[options.packages.find]
where = src